# mmx.ts

./: .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  README.md  THIRD_PARTY_LICENSE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/editor/: .gitignore  README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/sim/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
dist-web/: index.html
dist-web/assets/: index-BVGaoWM4.js  index-BvqXTHmH.js  index-a1a8Yye4.js
levels/: stage1.ascii  stage1.ldtk  stage2.ldtk
public/: index.html
resources/: README.md
scripts/: build-anims.mjs  build-demo-stage.mjs  build-enemies.mjs  build-pickups.mjs  build-shots.mjs
src/: server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/core/: Input.ts  Replay.ts  Rng.ts  Vec2.ts  constants.ts
src/engine/: AbilityUser.ts  Actor.ts  Animation.ts  Camera.ts  Character.ts  Enemy.ts  EnemyAI.ts  LevelData.ts  Player.ts  Projectile.ts  Recorder.ts  Scene.ts  (+3 more)
tests/: animation.test.ts  camera.test.ts  collision.test.ts  damage.test.ts  death.test.ts  enemy.test.ts  level.test.ts  movement.test.ts  replay.test.ts  shooting.test.ts  slopes.test.ts
tools/: build-anims.mjs  build-enemies.mjs  build-shots.mjs  export-ldtk.mjs  import-ldtk.mjs  slope-bake.mjs
(+109 files in other folders)
