[package]
name = "mmx-core-ts"
version = "1.0.0"
description = "Desktop shell for the MMX TypeScript gameplay core"
authors = ["MMX Core contributors"]
edition = "2021"

[lib]
name = "mmx_core_ts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
